feat: add selenium port optional

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     environment:
       VNC_NO_PASSWORD: 1
     ports:
-      - "4444:4444"
+      - "${SELENIUM_PORT:-4444}:4444"
       - "5901:5901"
     networks:
       - dev
