--- a/oxideshop/composer.json
+++ b/oxideshop/composer.json
@@ -42,7 +42,8 @@
     "oxid-professional-services/genericimporter": "1.0.10",
     "oxid-professional-services/oxid-console": "^6.0@beta",
     "oxid-professional-services/oxid-modules-config": "^6.1@beta",
-    "ddoe/visualcms-module": "3.3.2"
+    "ddoe/visualcms-module": "3.3.2",
+    "oxid-professional-services/paypal": "^0.0.1"
   },
   "require-dev": {
     "alfredbez/oxid-dump-autoload": "^0.1.0",
