--- a/oxideshop/custom/paypal-client/composer.json
+++ b/oxideshop/custom/paypal-client/composer.json
@@ -3,6 +3,7 @@
     "description": "",
     "type": "library",
     "require": {
+        "php" : "> 7.1",
         "guzzlehttp/guzzle": "^6.5",
         "phpunit/phpunit": "^7.5",
         "symfony/console": "^4.4",
