PSPAYPAL-444 paypal buttons
PSPAYPAL-444 paypal buttons

PSPAYPAL-444 paypal buttons

PSPAYPAL-444 add shared theme folder

PSPAYPAL-444 add shared theme folder

PSPAYPAL-444 add shared theme folder

PSPAYPAL-444 add shared theme folder

PSPAYPAL-444 add shared theme folder

PSPAYPAL-444 add shared theme folder

PSPAYPAL-440 start with mapping

PSPAYPAL-440 order sending mapping

PSPAYPAL-444 start with mapping

PSPAYPAL-444 test

--- a/oxideshop/test_config.yml
+++ b/oxideshop/test_config.yml
@@ -9,7 +9,7 @@ mandatory_parameters:
     # When testing not activated module, specify module path in shop.
     # Module path in shop, e.g. if module is in 'shop/modules/oe/mymodule' directory, value here should be 'oe/mymodule'.
     # Multiple modules can be specified separated by comma: 'oe/module1,module2,tt/module3'.
-    partial_module_paths: oxps/genericimporter
+    partial_module_paths: oxps/paypal
 
 optional_parameters:
     # eShop base url (if not set, takes it from shop's config.inc.php file)
