feat: add new grunt process "development"

--- a/oxideshop/source/modules/oxps/paypal/resources/grunt/aliases.yaml
+++ b/oxideshop/source/modules/oxps/paypal/resources/grunt/aliases.yaml
@@ -5,5 +5,10 @@ production:
   - "cssmin"
   - "uglify:moduleproduction"
 
+development:
+  - "jshint:moduleproduction"
+  - "sass:moduledevelopment"
+  - "concat:moduleproduction"
+
 default:
   - "production"
