--- a/oxideshop/source/modules/oxps/paypal/resources/package.json
+++ b/oxideshop/source/modules/oxps/paypal/resources/package.json
@@ -12,6 +12,7 @@
         "grunt": "^1.2.1",
         "grunt-contrib-cssmin": "^3.0.0",
         "grunt-contrib-jshint": "^2.1.0",
+        "grunt-contrib-concat": "^1.0.1",
         "grunt-contrib-sass": "^1.0.0",
         "grunt-contrib-uglify": "^4.0.1",
         "grunt-install-dependencies": "^0.2.0",
