--- a/oxideshop/custom/paypal-client/composer.json
+++ b/oxideshop/custom/paypal-client/composer.json
@@ -8,7 +8,8 @@
         "symfony/console": "^4.4",
         "psr/log": "^1.1",
         "league/oauth2-client": "^2.4",
-        "ext-json": "*"
+        "ext-json": "*",
+        "netresearch/jsonmapper": "^3.0"
     },
     "require-dev": {
         "php" : "^7.1",
