Paypal Client: improve comments and clean up of the technical client thing which is not be used for normal auth

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@
 /oxideshop/source/cache/
 /oxideshop/source/Setup/
 /oxideshop/source/*
+!/oxideshop/source/modules
+/oxideshop/source/modules/*
+!/oxideshop/source/modules/oxps
 !/oxideshop/source/.htaccess
 !/oxideshop/source/config.inc.php
 
