--- a/oxideshop/configurations/shop1.yaml
+++ b/oxideshop/configurations/shop1.yaml
@@ -13,6 +13,7 @@ GeneralShopSettings:
         - b2bservices
         - ddoevisualcms
         - psr_logger
+        - oxps/paypal
     aHomeCountry:
         - 8f241f11096877ac0.98748826
     aLanguageParams:
