--- a/oxideshop/source/modules/oxps/paypal/resources/package.json
+++ b/oxideshop/source/modules/oxps/paypal/resources/package.json
@@ -18,6 +18,7 @@
     "grunt-postcss": "^0.9.0",
     "grunt-sass": "^3.1.0",
     "load-grunt-config": "^3.0.1",
+    "load-grunt-tasks": "^5.1.0",
     "node-sass": "^4.14.1",
     "time-grunt": "^2.0.0"
   },
