--- a/oxideshop/composer.json
+++ b/oxideshop/composer.json
@@ -15,6 +15,10 @@
     },
     {
       "type": "path",
+      "url": "source/modules/payp/*"
+    },
+    {
+      "type": "path",
       "url": "custom/*"
     },
     {
@@ -51,6 +55,7 @@
     "oxid-professional-services/oxid-modules-config": "^6.1@beta",
     "oxid-professional-services/paypal": "^0.0.1",
     "oxid-professional-services/paypal-client": "dev-master",
+    "oxid-esales/paypalplus-module":"^4.0.0",
     "ext-curl": "*"
   },
   "require-dev": {
