--- a/oxideshop/source/modules/oxps/paypal/resources/package.json
+++ b/oxideshop/source/modules/oxps/paypal/resources/package.json
@@ -8,18 +8,20 @@
   "keywords": [],
   "author": "Oxid Professional Services",
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.2.4",
     "grunt": "^1.3.0",
+    "@lodder/grunt-postcss": "^3.0.0",
+    "ajv": "^7.0.4",
     "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-uglify": "^5.0.0",
     "grunt-install-dependencies": "^0.2.0",
-    "grunt-postcss": "^0.9.0",
+    "postcss": "^8.2.4",
     "grunt-sass": "^3.1.0",
     "load-grunt-config": "^3.0.1",
     "load-grunt-tasks": "^5.1.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "time-grunt": "^2.0.0"
   },
   "dependencies": {
