--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,13 +1,13 @@
 FROM oxidprojects/oxid-apache-php:php7.1
 
-# # We use custom port for docker apache
-# COPY ./ports.conf /etc/apache2/ports.conf
+# We use custom port for docker apache
+COPY ./ports.conf /etc/apache2/ports.conf
 
 # # Copy apache virtual site
-# COPY ./000-default.conf /etc/apache2/sites-enabled/000-default.conf
+COPY ./000-default.conf /etc/apache2/sites-enabled/000-default.conf
 
-# # Copy self-signed certificates
-# COPY ./server.* /etc/apache2/conf/
+# Copy self-signed certificates
+COPY ./server.* /etc/apache2/conf/
 
 # Enable SSL module
-#RUN a2enmod ssl
+RUN a2enmod ssl
