feat: add SSL_OXID_PORT to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       MYSQL_PORT: ${MYSQL_PORT}
       DOMAIN: ${DOMAIN}
       OXID_PORT: ${OXID_PORT}
+      SSL_OXID_PORT: ${SSL_OXID_PORT}
       PHP_IDE_CONFIG: "serverName=${DOMAIN}"
       CONTAINER_UID: ${CONTAINER_UID}
       COMPOSER_CACHE_DIR: "/var/composer_cache"
