--- a/oxideshop/composer.json
+++ b/oxideshop/composer.json
@@ -46,11 +46,13 @@
     "oxid-esales/oxideshop-ee": "6.2.3",
     "oxid-esales/oxideshop-pe": "6.2.2",
     "oxid-esales/oxideshop-unified-namespace-generator": "^2.0.1",
-    "oxid-esales/wave-theme": "^1.2",
+    "oxid-esales/wave-theme": "^1.3",
+    "oxid-esales/flow-theme": "^3.4",
     "oxid-professional-services/oxid-console": "^6.0@beta",
     "oxid-professional-services/oxid-modules-config": "^6.1@beta",
     "oxid-professional-services/paypal": "^0.0.1",
-    "oxid-professional-services/paypal-client": "dev-master"
+    "oxid-professional-services/paypal-client": "dev-master",
+    "oxid-professional-services/paypalplus-module": "^3.0.8"
   },
   "require-dev": {
     "alfredbez/oxid-dump-autoload": "^0.1.0",
