--- a/oxideshop/composer.json
+++ b/oxideshop/composer.json
@@ -37,6 +37,7 @@
     "giggsey/libphonenumber-for-php": "^8.12",
     "oxid-community/moduleinternals": "^3.0@alpha",
     "oxid-esales/b2b-module": "^3.2",
+    "oxid-esales/flow-theme": "^3.4",
     "oxid-esales/oxideshop-ce": "6.3.6",
     "oxid-esales/oxideshop-composer-plugin": "2.0.*",
     "oxid-esales/oxideshop-db-views-generator": "^1.2",
@@ -47,11 +48,11 @@
     "oxid-esales/oxideshop-pe": "6.2.2",
     "oxid-esales/oxideshop-unified-namespace-generator": "^2.0.1",
     "oxid-esales/wave-theme": "^1.3",
-    "oxid-esales/flow-theme": "^3.4",
     "oxid-professional-services/oxid-console": "^6.0@beta",
     "oxid-professional-services/oxid-modules-config": "^6.1@beta",
     "oxid-professional-services/paypal": "^0.0.1",
     "oxid-professional-services/paypal-client": "dev-master",
+    "oxid-professional-services/paypallocale": "^0.0.1",
     "oxid-professional-services/paypalplus-module": "^3.0.8"
   },
   "require-dev": {
