--- a/oxideshop/source/modules/oxps/paypal/resources/package.json
+++ b/oxideshop/source/modules/oxps/paypal/resources/package.json
@@ -1,13 +1,16 @@
 {
   "name": "paypal-resources",
   "version": "1.0.0",
-  "description": "",
+  "description": "resources for js and scss components",
   "repository": {},
   "license": "(MIT OR Apache-2.0)",
   "main": "Gruntfile.js",
   "keywords": [],
   "author": "Oxid Professional Services",
   "devDependencies": {
+    "bootstrap": "4.6.*",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.6.1",
     "autoprefixer": "^10.2.5",
     "grunt": "^1.3.0",
     "@lodder/grunt-postcss": "^3.0.0",
