--- a/oxideshop/source/modules/oxps/paypal/composer.json
+++ b/oxideshop/source/modules/oxps/paypal/composer.json
@@ -4,10 +4,9 @@
   "type": "oxideshop-module",
   "keywords": ["oxid", "modules", "paypal", "pay"],
   "license": "proprietary",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "require": {
-    "viison/address-splitter": "^0.3.4",
-    "ext-json": "*"
+    "giggsey/libphonenumber-for-php": "^8.12",
   },
   "archive": {
     "exclude": ["/resources"]
