Small fix in Readme file; fresh export with latst module settings after importing a dump

--- a/oxideshop/configurations/development/shop1.yaml
+++ b/oxideshop/configurations/development/shop1.yaml
@@ -8,4 +8,4 @@ oxshops:
     OXORDEREMAIL: reply@myoxideshop.com
     OXOWNEREMAIL: order@myoxideshop.com
     OXSMTP: ''
-    OXSMTPUSER: ''
+    OXSMTPUSER: mario.lorenz+test@oxid-esales.com
