--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
 
 .build_and_deploy: &build_and_deploy
   stage: deploy
-  image: oxidprojects/oxid-apache-php:php7.2
+  image: oxidprojects/oxid-apache-php:oxid6.2-php7.4
   before_script:
     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )'
     - eval $(ssh-agent -s)
@@ -33,7 +33,7 @@ deploy_stage:
 
 ci_tests:
   stage: test
-  image: oxidprojects/oxid-apache-php:php7.2
+  image: oxidprojects/oxid-apache-php:oxid6.2-php7.4
   only:
     - merge_requests
   before_script:
@@ -45,9 +45,8 @@ ci_tests:
     - vendor/bin/oe-eshop-unified_namespace_generator
     - vendor/bin/oe-eshop-db_migrate migrations:migrate > /dev/null
     - vendor/bin/oe-eshop-db_views_generate
-    - vendor/bin/oxid config:import --env=development
     - vendor/bin/runtests
-    - vendor/bin/phpcs --standard=coding_standard.xml source/modules/oxps/paypal
+    - vendor/bin/phpcs --standard=coding_standard.xml custom/paypal
   services:
     - name: mysql:5.7
       alias: db
