--- a/oxideshop/composer.json
+++ b/oxideshop/composer.json
@@ -45,7 +45,8 @@
   "require-dev": {
     "oxid-esales/testing-library": "^v7.3.0",
     "incenteev/composer-parameter-handler": "^v2.0.0",
-    "oxid-esales/oxideshop-ide-helper": "^v4.0.0"
+    "oxid-esales/oxideshop-ide-helper": "^v4.0.0",
+    "squizlabs/php_codesniffer": "3.*"
   },
   "scripts": {
     "post-install-cmd": [
