--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -6,7 +6,7 @@
     - [~/.personal_ansible_vm.yml, vars/empty.yml]
     - [../personal.yml, vars/empty.yml]
   roles:
-#    - build_backend
+    - build_backend
     - create_shop_config
 
 
