feat: change install shop during deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ ci_tests:
     - mysql -u $MYSQL_USER -h db -p$MYSQL_PASSWORD $MYSQL_DATABASE < "docker/db-dump/initial-data.sql"
     - composer config -g cache-dir "$(pwd)/.composer-cache"
   script:
-    - cd oxideshop && composer install --no-ansi --no-interaction --no-progress
+    - cd oxideshop && composer install
     - vendor/bin/oe-eshop-db_views_generate
     - vendor/bin/oe-eshop-unified_namespace_generator
     - vendor/bin/oe-eshop-db_migrate migrations:migrate > /dev/null
