--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
 
 .build_and_deploy: &build_and_deploy
   stage: deploy
-  image: oxidprojects/oxid-apache-php:oxid6.2-php7.4
+  image: mprokopov/oxid-ansible-runner
   before_script:
     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )'
     - eval $(ssh-agent -s)
