--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
 
 .build_and_deploy: &build_and_deploy
   stage: deploy
-  image: oxidprojects/oxid-apache-php:master-php7.4
+  image: psgit.oxid-esales.com:4567/psprojects/tremco-illbruck-tina/oxid-ci-runner:php-7.4
   before_script:
     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )'
     - eval $(ssh-agent -s)
@@ -33,7 +33,7 @@ deploy_stage:
 
 ci_tests:
   stage: test
-  image: oxidprojects/oxid-apache-php:master-php7.4
+  image: psgit.oxid-esales.com:4567/psprojects/tremco-illbruck-tina/oxid-ci-runner:php-7.4
   only:
     - merge_requests
   before_script:
