--- a/deploy/ansible/roles/build_backend/tasks/main.yml
+++ b/deploy/ansible/roles/build_backend/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: Composer install
   local_action:
     module: shell
-    _raw_params: composer install --no-ansi --no-interaction --no-progress --no-scripts --no-plugins
+    _raw_params: composer install --no-ansi --no-interaction --no-progress
     args:
       chdir: "{{ build_root_path }}/oxideshop/"
   environment:
