--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -7,7 +7,7 @@
     - [../personal.yml, vars/empty.yml]
   roles:
     - create_shop_config
-    - build_backend
+#    - build_backend
 
 
 - name: "Deploy"
@@ -19,6 +19,6 @@
     - [~/.personal_ansible_vm.yml, vars/empty.yml]
     - [../personal.yml, vars/empty.yml]
   roles:
-    - deploy
-    - fixup
+#    - deploy
+#    - fixup
 #    - slack_notification
