--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -19,6 +19,6 @@
     - [~/.personal_ansible_vm.yml, vars/empty.yml]
     - [../personal.yml, vars/empty.yml]
   roles:
-#    - deploy
+    - deploy
 #    - fixup
 #    - slack_notification
