Force-added blank out dir; reverted a change to 01_deploy.yml

--- a/deploy/ansible/group_vars/staging/01_deploy.yml
+++ b/deploy/ansible/group_vars/staging/01_deploy.yml
@@ -3,4 +3,4 @@ deployment_root: "/var/www/oxid/"
 releases_path: "{{ deployment_root }}/releases"
 release_target_path: "current"
 deploy:
-  pictures: false
+  pictures: true
